k8s_stategies/6 - shadow/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: goprom
  labels:
    app: goprom
spec:
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - goprom.local
