k8s_stategies/6 - shadow/virtualservice-mirror.yaml
# Mirror traffic to v2.0.0
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: goprom
  labels:
    app: goprom
spec:
  hosts:
    - goprom.local
  gateways:
    - goprom
  http:
    - route:
        - destination:
            host: goprom-v1
      mirror:
        host: goprom-v2
